Favourites
Added functionality to store locations as favourites
